# LaTeX_API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pytest_run_result.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest_output.txt  requirements.txt  run_pytest.py  setup.py
.github/workflows/: ci.yml
src/latex_compile_service/: __init__.py  app.py  celery_app.py  config.py  limiter.py  main.py  tasks.py
src/latex_compile_service/api/: __init__.py  dependencies.py
src/latex_compile_service/api/routers/: __init__.py  compile.py  health.py
src/latex_compile_service/core/: __init__.py  security.py
src/latex_compile_service/schemas/: __init__.py  compile.py
src/latex_compile_service/services/: __init__.py  compile_service.py
src/latex_compile_service/utils/: __init__.py  latex_utils.py
tests/: conftest.py  test_api.py  test_compile.py  test_compile_service.py  test_utils.py
